updateComposante